[package]
name = "bevy_swash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "wayland",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_scene",
    "bevy_winit",
    "bevy_ui",
    "bevy_text",
    "multi_threaded",
] }
swash = "0.1.17"
thiserror = "2.0.3"
